update commands logic
