# server/rbacpolicy/rbacpolicy.go
@@ -14,15 +14,16 @@ import (
 
 const (
 	// please add new items to Resources
-	ResourceClusters     = "clusters"
-	ResourceProjects     = "projects"
-	ResourceApplications = "applications"
-	ResourceRepositories = "repositories"
-	ResourceCertificates = "certificates"
-	ResourceAccounts     = "accounts"
-	ResourceGPGKeys      = "gpgkeys"
-	ResourceLogs         = "logs"
-	ResourceExec         = "exec"
+	ResourceClusters       = "clusters"
+	ResourceProjects       = "projects"
+	ResourceApplications   = "applications"
+	ResourceApplicationSet = "applicationset"
+	ResourceRepositories   = "repositories"
+	ResourceCertificates   = "certificates"
+	ResourceAccounts       = "accounts"
+	ResourceGPGKeys        = "gpgkeys"
+	ResourceLogs           = "logs"
+	ResourceExec           = "exec"
 
 	// please add new items to Actions
 	ActionGet      = "get"
@@ -40,6 +41,7 @@ var (
 		ResourceClusters,
 		ResourceProjects,
 		ResourceApplications,
+		ResourceApplicationSet,
 		ResourceRepositories,
 		ResourceCertificates,
 		ResourceLogs,
